// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when no email 1`] = `
<span
  className="text-muted-2"
>
  report.no_email_to_subscribe
</span>
`;

exports[`renders when not subscribed 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  report.subscribe_x.report.frequency.montly
</a>
`;

exports[`renders when subscribed 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  report.unsubscribe_x.report.frequency.montly
</a>
`;
